adicionado Venon, configurado TS

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "venom-bot": "^4.0.6"
   }
 }
