--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
@@ -18,6 +20,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "libphonenumber-js": "^1.9.49",
     "venom-bot": "^4.0.6"
   }
 }
